# pass-mgr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
crates/pass-mgr-core/: Cargo.toml
crates/pass-mgr-core/src/: crypto.rs  csv.rs  lib.rs  merge.rs  password.rs  records.rs  storage.rs  types.rs  vault.rs
crates/pass-mgr-core/src/vault/: migrate.rs
crates/pass-mgr-core/tests/: format_compat.rs  golden_v4.rs  metamorphic.rs
crates/pass-mgr-core/tests/fixtures/golden_v4/: vault.pmv
crates/pass-mgr-core/tests/fixtures/golden_v4/manifest/: manifest.0
crates/pass-mgr-core/tests/fixtures/golden_v4/volume/: vol.0
crates/pass-mgr-desktop/: Cargo.toml
crates/pass-mgr-desktop/examples/: seed_sample_vault.rs
crates/pass-mgr-desktop/src/: gui.rs  gui_help.rs  launch.rs  lib.rs  main.rs  migrate_cli.rs  single_instance.rs  ui.rs
crates/pass-mgr-desktop/tests/: cli.rs  crash_recovery.rs  lock_cross_process.rs  migrate_doc_paths_cli.rs  update_from_cli.rs
crates/pass-mgr-ffi/: Cargo.toml  uniffi.toml
crates/pass-mgr-ffi/src/: lib.rs
docs/: ASSET_ACCOUNT_LINKS.md  AUDIT_2026-06-29.md  AUDIT_2026-06-29_round2.md  AUDIT_2026-06-29_round3.md  AUDIT_2026-06-29_round4.md  AUDIT_2026-06-29_round5.md  AUDIT_2026-07-03.md  DESIGN.md  HARDENING.md  IMPLEMENTATION.md  PLAN.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: doc_paths.rs  merge_from.rs  parse_archive.rs  parse_frame.rs  parse_header.rs  parse_manifest.rs  scan_volume.rs
fuzz/seeds/parse_frame/: empty_body  huge_path_len  valid
fuzz/seeds/parse_header/: bad_magic  bad_version  max_params  short  valid
fuzz/seeds/parse_manifest/: empty  one_entry  two_entries
fuzz/seeds/scan_volume/: garbage
mobile/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/composeApp/: build.gradle.kts
mobile/composeApp/src/androidMain/: AndroidManifest.xml
mobile/composeApp/src/androidMain/kotlin/com/passmgr/: MainActivity.kt
mobile/composeApp/src/androidMain/res/xml/: data_extraction_rules.xml
mobile/composeApp/src/commonMain/kotlin/com/passmgr/: App.kt
mobile/composeApp/src/iosMain/kotlin/com/passmgr/: MainViewController.kt
mobile/gradle/: libs.versions.toml
mobile/iosApp/: IOS_SECURITY_VERIFY.md  README.md
mobile/iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift  iosApp.entitlements
mobile/scripts/: install-android-toolchain.sh
packaging/: README.md
packaging/icons/: make_icons.py
packaging/linux/: install-shortcuts.sh  pass-mgr-edit.desktop  pass-mgr.desktop
packaging/windows/: make-shortcuts.ps1
src/: crypto.rs  fault.rs  gui.rs  launch.rs  lib.rs  main.rs  password.rs  records.rs  single_instance.rs  storage.rs  types.rs  ui.rs  vault.rs
tests/: crash_recovery.rs  dmflakey_powerloss.sh
