[package]
name = "pass-mgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
# Clipboard only; disable the default `image-data` feature (pulls a PNG/deflate
# image stack we never use) to shrink the dependency/attack surface.
arboard = { version = "3.6.1", default-features = false }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
directories = "6.0.0"
eframe = "0.34.3"
getrandom = "0.4.2"
ratatui = "0.30.1"
region = "3.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zeroize = { version = "1.9.0", features = ["derive"] }

[features]
# Compiles the crash-safety fault-injection hooks (src/fault.rs) into the storage
# and vault commit paths. OFF by default (and in every release build), where the
# hooks are zero-cost no-ops. Enable for crash/full-disk tests:
#   cargo test --features fault-injection
fault-injection = []

[dev-dependencies]
# Property-based testing for the parsers, the store invariants, and path
# normalization (§13.4).
proptest = "1"

[profile.release]
# Strip symbols and debug info from the release binary (smaller distributable).
strip = true
