# Virtual workspace root. The single `pass-mgr` package was split into:
#   crates/pass-mgr-core    — headless, audited vault core (no UI/OS deps)
#   crates/pass-mgr-desktop — the CLI + ratatui TUI + egui GUI binaries
#   crates/pass-mgr-ffi     — UniFFI wrapper for the Android/iOS apps (added later)
# The `fuzz/` crate is its own (detached) workspace and links pass-mgr-core directly.
[workspace]
resolver = "2"
members = [
    "crates/pass-mgr-core",
    "crates/pass-mgr-desktop",
    "crates/pass-mgr-ffi",
]

[profile.release]
# Strip symbols and debug info from release binaries (smaller distributable).
strip = true
# Keep integer-overflow checks ON in release (off by default). The parsers do their
# own checked arithmetic, but this is cheap defense-in-depth for this security tool:
# a missed overflow panics (fail-closed) instead of silently wrapping in shipped
# builds. Verified by the CI release-build step.
overflow-checks = true
