[package]
name = "pass-mgr-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pass-mgr-core]
path = "../crates/pass-mgr-core"

# Each target is one libfuzzer binary. They feed random bytes into the
# untrusted-input parsers and assert the code never panics/over-allocates.
[[bin]]
name = "parse_header"
path = "fuzz_targets/parse_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_manifest"
path = "fuzz_targets/parse_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scan_volume"
path = "fuzz_targets/scan_volume.rs"
test = false
doc = false
bench = false

[[bin]]
name = "doc_paths"
path = "fuzz_targets/doc_paths.rs"
test = false
doc = false
bench = false

[[bin]]
name = "merge_from"
path = "fuzz_targets/merge_from.rs"
test = false
doc = false
bench = false

# Keep the fuzz crate out of the parent workspace; it is its own package.
[workspace]
